--- a/app.json
+++ b/app.json
@@ -18,10 +18,21 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.thanawat.p.PushFcm",
+      "googleServicesFile": "./assets/google-services.json"  
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "35186308-52da-4256-87db-1fc112008ce2"
+      }
+    },
+    "owner": "thanawat.p",
+    "plugins":[
+      "expo-notifications"
+    ]
   }
 }
