--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^20.1.0",
+    "@react-native-firebase/messaging": "^20.1.0",
     "expo": "~51.0.14",
+    "expo-constants": "~16.0.2",
+    "expo-device": "~6.0.2",
+    "expo-notifications": "~0.28.9",
     "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "^3.0.6",
     "react": "18.2.0",
     "react-native": "0.74.2"
   },
